<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
     >

    <ImageView
        android:id="@+id/image_guate"
        android:layout_width="462dp"
        android:layout_height="332dp"
        android:layout_marginBottom="454dp"
        android:contentDescription="@string/picture_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/guate" />

    <EditText
        android:id="@+id/set_name"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="318dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/my_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/image_guate"
        app:layout_constraintVertical_bias="1.0"

        android:hint="@string/my_name"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/show_name"
        android:layout_width="80dp"
        android:layout_height="37dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:text="@string/a_name"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <Button
        android:id="@+id/peten"
        android:layout_width="78dp"
        android:layout_height="41dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:onClick="goPeten"
        android:text="@string/boton_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/izabal"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/izabal"
        android:layout_width="94dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/boton_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/antigua"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/peten" />

    <Button
        android:id="@+id/antigua"
        android:layout_width="96dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="24dp"
        android:text="@string/boton_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/izabal" />

    <TextView
        android:id="@+id/guatemala"
        android:layout_width="165dp"
        android:layout_height="38dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/app_name"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_guate" />

    <TextView
        android:id="@+id/name"
        android:layout_width="72dp"
        android:layout_height="42dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="252dp"
        android:gravity="center"
        android:text="@string/name"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/peten"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/star_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginBottom="76dp"
        android:contentDescription="@string/boton_star"
        android:onClick="set"
        app:layout_constraintBottom_toTopOf="@+id/set_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.877"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/star_big_on" />
</androidx.constraintlayout.widget.ConstraintLayout>